# NgasirYuK

./: .gitignore  PRD.md  README.md
backend/: pyproject.toml  seed.py  start.bat
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  activity_log.py  category.py  product.py  purchase.py  sale.py  stock_movement.py  supplier.py  user.py
backend/app/routers/: auth.py  inventory.py  master.py  products.py  purchases.py  reports.py  sales.py  users.py
backend/app/schemas/: __init__.py  inventory.py  master.py  product.py  transaction.py  user.py
backend/app/services/: log_service.py  report_service.py  stock_service.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/(dashboard)/: layout.js
frontend/app/(dashboard)/activity-log/: page.js
frontend/app/(dashboard)/dashboard/: page.js
frontend/app/(dashboard)/laporan/: page.js
frontend/app/(dashboard)/master/barang/: page.js
frontend/app/(dashboard)/master/kategori/: page.js
frontend/app/(dashboard)/master/supplier/: page.js
frontend/app/(dashboard)/pengguna/: page.js
frontend/app/(dashboard)/persediaan/opname/: page.js
frontend/app/(dashboard)/persediaan/stok/: page.js
frontend/app/(dashboard)/transaksi/pembelian/: page.js
frontend/app/login/: page.js
frontend/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/components/ui/: Modal.jsx
frontend/lib/: AuthContext.js  ThemeContext.js  ToastContext.js  api.js  utils.js
(+1 files in other folders)
