[project]
name = "ngasiryuk-backend"
version = "0.1.0"
description = "NgasirYuK - Sistem Informasi Kasir & Manajemen Persediaan"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
